--- a/index.html
+++ b/index.html
@@ -18368,6 +18368,13 @@
 </tr>
 
 <tr>
+<td>Crimson Cougar</td>
+<td>1989</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crimson Dreams</td>
 <td>1984</td>
 <td>Crimson Productions</td>
@@ -19216,6 +19223,13 @@
 </tr>
 
 <tr>
+<td>Daemon's Blood</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daemonstorm</td>
 <td>1996</td>
 <td>Caliber</td>
@@ -19633,6 +19647,27 @@
 <td>2017</td>
 <td>Aftershock</td>
 <td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Assassin</td>
+<td>1987</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Assassin</td>
+<td>1989</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Assassin And Chance</td>
+<td>1991</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23260,6 +23295,13 @@
 </tr>
 
 <tr>
+<td>Dragon Quest</td>
+<td>1986</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dragon Lines: The Way Of The Warrior</td>
 <td>1993</td>
 <td>Epic</td>
@@ -23773,6 +23815,13 @@
 <td>2005</td>
 <td>Neople</td>
 <td><a href="DungeonFighterOnline/DFO.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dungeoneers</td>
+<td>1986</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24319,6 +24368,13 @@
 <td>2018</td>
 <td>American Mythology</td>
 <td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edge</td>
+<td>1987</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24991,6 +25047,13 @@
 <td>1991</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eradicators</td>
+<td>1986</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26359,6 +26422,13 @@
 </tr>
 
 <tr>
+<td>Fantastic Fables</td>
+<td>1986</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fantastic Fears</td>
 <td>1953</td>
 <td>Farrell</td>
@@ -26601,6 +26671,20 @@
 <td>1983</td>
 <td>Rip Off</td>
 <td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
+<td>Fat Ninja</td>
+<td>1986</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fat Ninja</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30802,6 +30886,20 @@
 </tr>
 
 <tr>
+<td>GMC Collections Graphic Novel Series</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
+<td>GMC Humor Special</td>
+<td>1991</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gnatrat: The Movie</td>
 <td>1990</td>
 <td>Innovation</td>
@@ -31467,6 +31565,20 @@
 </tr>
 
 <tr>
+<td>Greater Mercury Comics</td>
+<td>1989</td>
+<td>Publisher</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Greater Mercury Comics Action</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Greatest Adventure</td>
 <td>2017</td>
 <td>Dynamite</td>
@@ -31817,6 +31929,13 @@
 </tr>
 
 <tr>
+<td>Grips</td>
+<td>1989</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grit Bath</td>
 <td>1993</td>
 <td>Fantagraphics</td>
@@ -31989,6 +32108,13 @@
 <td>2010</td>
 <td>Dark Horse</td>
 <td><a href="Guild/Guild.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Guillotine</td>
+<td>1987</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35110,6 +35236,13 @@
 <td>2009</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>I Come In Peace</td>
+<td>1991</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40661,6 +40794,27 @@
 <td>1973</td>
 <td>DC</td>
 <td><a href="LegionOfSuperHeroes/LegionOfSuperHeroes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legion X-1</td>
+<td>1987</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legion X-1</td>
+<td>1989</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legion X-2</td>
+<td>1989</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48199,6 +48353,13 @@
 </tr>
 
 <tr>
+<td>Night Master</td>
+<td>1987</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Night Music</td>
 <td>1979</td>
 <td>Eclipse</td>
@@ -51990,6 +52151,13 @@
 </tr>
 
 <tr>
+<td>Port</td>
+<td>1987</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Portable Lowlife</a>
 <td>1993</td>
 <td>MU Press</td>
@@ -52729,7 +52897,21 @@
 <td>DC</td>
 <td><a href="PsychoDC/PsychoDC.html">Details</a></td>
 </tr>
- 
+
+<tr>
+<td>Psycho-Path</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Psycho-Path The Ultimate Vigilante</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Psychoanalysis</td>
 <td>1955</td>
@@ -52927,7 +53109,7 @@
 </tr>
 
 <tr>
-<td>Pergatori</td>
+<td>Purgatori</td>
 <td>2005</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
@@ -58444,6 +58626,13 @@
 </tr>
 
 <tr>
+<td>Silver Wolf Comics</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Silverback</td>
 <td>1989</td>
 <td>Comico</td>
@@ -60841,6 +61030,13 @@
 <td>2010</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stech</td>
+<td>1986</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
 </tr>
 
 <tr>
@@ -63503,6 +63699,13 @@
 </tr>
 
 <tr>
+<td>Thieves</td>
+<td>1987</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thing!</td>
 <td>1952</td>
 <td>Carlton</td>
@@ -64011,6 +64214,13 @@
 <td>1967</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tink</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66762,6 +66972,13 @@
 </tr>
 
 <tr>
+<td>Venusian Press Presents</td>
+<td>1990</td>
+<td>Greater Mercury</td>
+<td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Verdict</td>
 <td>1987</td>
 <td>Eternity</td>
@@ -66906,6 +67123,13 @@
 <td>1985</td>
 <td>Renegade</td>
 <td><a href="RenegadePress/RenegadePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Victim</td>
+<td>1987</td>
+<td>Silver Wolf</td>
+<td><a href="SilverWolf/SilverWolf.html">Details</a></td>
 </tr>
 
 <tr>
