--- a/index.html
+++ b/index.html
@@ -53774,6 +53774,13 @@
 </tr>
 
 <tr>
+<td>Real Deal</td>
+<td>1989</td>
+<td>Real Deal Productions</td>
+<td><a href="RealDeal/RealDeal.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Real Ghostbusters</td>
 <td>1988</td>
 <td>Now</td>
