--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -61,6 +61,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics41.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics42.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics139.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics44.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics45.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics46.jpg"></div>
@@ -223,6 +224,7 @@ Titles
 <li><a href="Fantagraphics43.jpg">Blood Orange</a> (2004)
 <li><a href="../SparkyWatts/SparkyWatts.html">Boody</a> (2009)
 <li><a href="../PeterBagge/PeterBagge.html">Bradleys</a> (1989)
+<li><a href="Fantagraphics139.jpg">Brain Capers</a> (1993)
 <li><a href="Fantagraphics45.jpg">Brinkley Girls: Best of Nell Brinkley</a> (2009)
 <li><a href="Fantagraphics44.jpg">Bummer</a> (1995)
 <li><a href="Fantagraphics46.jpg">Buz Swayer</a> (2011)
