--- a/index.html
+++ b/index.html
@@ -12513,6 +12513,13 @@
 </tr>
 
 <tr>
+<td>Brain Caper</td>
+<td>1993</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brain Fantasy</td>
 <td>1972</td>
 <td>Last Gasp</td>
@@ -12580,6 +12587,13 @@
 <td>1955</td>
 <td>DC</td>
 <td><a href="BraveAndTheBold/BraveAndTheBold.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brave New Words</td>
+<td>1990</td>
+<td>Publisher</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
 </tr>
 
 <tr>
