Brave New Words

--- a/index.html
+++ b/index.html
@@ -16213,6 +16213,13 @@
 </tr>
 
 <tr>
+<td>Citizen Nocturne</td>
+<td>1992</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Citizen Of The Galaxy</td>
 <td>2015</td>
 <td>IDW</td>
@@ -17588,6 +17595,13 @@
 <td>1986</td>
 <td>Stages Comics</td>
 <td><a href="ConstellationGraphics/ConstellationGraphics.html">Details</a>
+</tr>
+
+<tr>
+<td>Contaminated Zone</td>
+<td>1991</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27781,6 +27795,13 @@
 <td>2019</td>
 <td>Abstract</td>
 <td><a href="AbstractStudio/AbstractStudio.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fix</td>
+<td>1990</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45807,6 +45828,13 @@
 </tr>
 
 <tr>
+<td>Misspent Youths</td>
+<td>1991</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mister Ed, The Talking Horse</td>
 <td>1962</td>
 <td>Gold Key</td>
@@ -50243,6 +50271,13 @@
 </tr>
 
 <tr>
+<td>Oz Squad</td>
+<td>1991</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Oz: The Manga</td>
 <td>2005</td>
 <td>Antarctic Press</td>
@@ -51948,6 +51983,13 @@
 <td><a href="Avon/Avon.html">Details</a></td>
 
 <tr>
+<td>Polis</td>
+<td>1991</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Political Power Al Franken</td>
 <td>2010</td>
 <td>Tidalwave</td>
@@ -52204,6 +52246,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Post-Mortem</td>
+<td>1991</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61292,6 +61341,13 @@
 </tr>
 
 <tr>
+<td>Stinz</td>
+<td>1990</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stinz: A Stranger To Our Kind</a>
 <td>1997</td>
 <td>MU Press</td>
@@ -61338,6 +61394,13 @@
 <td>1993</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stinz: Wartime And Wedding Bells</td>
+<td>1992</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
 </tr>
 
 <tr>
@@ -65625,6 +65688,13 @@
 <td>2014</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uberdub</td>
+<td>1991</td>
+<td>Brave New Words</td>
+<td><a href="BraveNewWords/BraveNewWords.html">Details</a></td>
 </tr>
 
 <tr>
