--- a/index.html
+++ b/index.html
@@ -67434,6 +67434,13 @@
 </tr>
 
 <tr>
+<td>Volantis</td>
+<td>2016</td>
+<td>Solstice Art</td>
+<td><a href="Volantis/Volantis.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Volcanic Revolver</td>
 <td>1999</td>
 <td>Oni</td>
