--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -337,6 +337,7 @@ Titles
 <li><a href="../UsagiYojimbo/UsagiYojimbo.html">Usagi Yojimbo</a> (1987)
 <li><a href="Fantagraphics128.jpg">Walt Disney's Mickey Mouse</a> (2011)
 <li><a href="Fantagraphics129.jpg">Wandering Son</a> (2015)
+<li><a href="Fantagraphics140.jpg">We Told You So: Comics As Art</a> (2017)
 <li><a href="Fantagraphics130.jpg">Weasel</a> (1999)
 <li><a href="Fantagraphics131.jpg">Weathercraft</a> (2010)
 <li><a href="Fantagraphics132.jpg">Wheela, Biker Bitch of the Apocalypse</a> (2007)    
