--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -191,6 +191,7 @@
 <div class="mySlides" style="text-align: center;"><img src="IDW171.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IDW172.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IDW173.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IDW348.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IDW174.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IDW175.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IDW176.jpg"></div>
@@ -569,6 +570,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW171.jpg">Graham Ingles' EC Stories Artists Edition</a> (2016)
 <li><a href="IDW172.jpg">Grimjack: Killer Instinct</a> (2005) 
 <li><a href="IDW173.jpg">Grimjack: The Manx Cat</a> (2009) 
+<li><a href="IDW348.jpg">Grimmwood's Daughter</a> (2009)
 <li><a href="IDW174.jpg">Groom Lake</a> (2009) 
 <li><a href="IDW175.jpg">Grumpy Old Monsters</a> (2003) 
 <li><a href="IDW176.jpg">Gutter Magic</a> (2016)
