--- a/index.html
+++ b/index.html
@@ -310,6 +310,13 @@
 </tr>
 
 <tr>
+<td>7 Ages Of Woman</td>
+<td>1990</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>7 Billion Needles</td>
 <td>2010</td>
 <td>Vertical</td>
@@ -1762,6 +1769,13 @@
 </tr>
 
 <tr>
+<td>Acid Head Arnie</td>
+<td>1994</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Acidboy</td>
 <td>1996</td>
 <td>Starhead</td>
@@ -2249,6 +2263,13 @@
 <td>1977</td>
 <td>Rip Off</td>
 <td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
+<td>Adventures Of Fat Freddy's Cat</td>
+<td>1978</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3517,6 +3538,13 @@
 <td>1986</td>
 <td>Fox</td>
 <td><a href="Aliens/Aliens.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens Ate My Trousers</td>
+<td>1998</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9950,6 +9978,13 @@
 </tr>
 
 <tr>
+<td>Big Book Of Everything</td>
+<td>1983</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Big Book Romances</td>
 <td>1950</td>
 <td>Fawcett</td>
@@ -11995,6 +12030,13 @@
 </tr>
 
 <tr>
+<td>Bolland Strips!</td>
+<td>2005</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bolt</td>
 <td>2008</td>
 <td>Disney</td>
@@ -13738,6 +13780,13 @@
 </tr>
 
 <tr>
+<td>Calculus Cat</td>
+<td>1987</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Calexit</td>
 <td>2017</td>
 <td>Black Mask</td>
@@ -14672,6 +14721,13 @@
 <td>2006</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casanova's Last Stand</td>
+<td>1993</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16269,6 +16325,13 @@
 </tr>
 
 <tr>
+<td>Citymouth</td>
+<td>2000</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Civil War</td>
 <td>2006</td>
 <td>Marvel</td>
@@ -17413,6 +17476,13 @@
 <td>1984</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Complete Freak Brothers</td>
+<td>2001</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19570,6 +19640,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dante's Inferno</td>
+<td>2012</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22011,6 +22088,13 @@
 <td>1983</td>
 <td>Random House</td>
 <td><a href="Discworld/Discworld.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Disease Of Language</td>
+<td>2005</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25953,6 +26037,13 @@
 </tr>
 
 <tr>
+<td>Fabulous Furry Freak Brothers</td>
+<td>1976</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fabulous Furry Freak Brothers In Grass Roots</td>
 <td>1984</td>
 <td>Rip Off</td>
@@ -26702,6 +26793,13 @@
 </tr>
 
 <tr>
+<td>Fat Freddy's Comics &amp; Stories</td>
+<td>1984</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fat Ninja</td>
 <td>1986</td>
 <td>Silver Wolf</td>
@@ -27345,6 +27443,13 @@
 </tr>
 
 <tr>
+<td>Fifty Freakin' Years With The Fabulous Furry Freak Brothers</td>
+<td>2017</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fight Comics</td>
 <td>1940</td>
 <td>Fiction House</td>
@@ -27650,6 +27755,20 @@
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Firestar/Firestar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Firkin</td>
+<td>1989</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Firkin Collection</td>
+<td>2002</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31943,6 +32062,13 @@
 </tr>
 
 <tr>
+<td>Grimwood's Daughter</td>
+<td>2009</td>
+<td>IDW</td>
+<td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grins</td>
 <td>1946</td>
 <td>Harvey</td>
@@ -34847,6 +34973,13 @@
 </tr>
 
 <tr>
+<td>How To Commit Suicide In South Africa</td>
+<td>1983</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>How To Fake a Moon Landing</td>
 <td>2013</td>
 <td>Abrams</td>
@@ -35463,7 +35596,7 @@
 </tr>
 
 <tr>
-<td>IDW</td>
+<td>IDW Publishing</td>
 <td>1999</td>
 <td>Publisher</td>
 <td><a href="IDW/IDW.html">Details</a></td>
@@ -39635,6 +39768,27 @@
 </tr>
 
 <tr>
+<td>Knockabout Comics</td>
+<td>1978</td>
+<td>Publisher</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Knockabout Comics</td>
+<td>1980</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Knockabout Trial Special</td>
+<td>1984</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Knockout</td>
 <td>1939</td>
 <td>Amalgamated</td>
@@ -39961,6 +40115,13 @@
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Labyrinth/Labyrinth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lady Chatterly's Lover</td>
+<td>1986</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40878,6 +41039,13 @@
 <td>1990</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Leo Baxendale's Thrrp!</td>
+<td>1987</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49207,6 +49375,13 @@
 </tr>
 
 <tr>
+<td>Not Quite Dead</td>
+<td>1993</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nova</td>
 <td>1976</td>
 <td>Marvel</td>
@@ -49844,6 +50019,13 @@
 </tr>
 
 <tr>
+<td>Opium</td>
+<td>1986</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Opposable Thumbs</td>
 <td>2001</td>
 <td>Alternative</a>
@@ -50184,6 +50366,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Outrageous Tales From The Old Testament</td>
+<td>1987</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51345,6 +51534,13 @@
 <td>2010</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pilgrim &amp; Son In The Festival Ritual</td>
+<td>2005</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53354,6 +53550,13 @@
 </tr>
 
 <tr>
+<td>R. Crumb Draws The Blues</td>
+<td>1992</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>R. Crumb's Comic And Stories</td>
 <td>1969</td>
 <td>Rip Off</td>
@@ -53631,6 +53834,13 @@
 <td>1483</td>
 <td>Creator</td>
 <td><a href="Raphael/Raphael.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rapid Reflexes!</td>
+<td>1990</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54924,6 +55134,13 @@
 <td>1989</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rime Of The Ancient Mariner</td>
+<td>1989</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -57623,6 +57840,13 @@
 <td>2013</td>
 <td>Ape</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Seven Deadly Sins</td>
+<td>1987</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61054,6 +61278,13 @@
 </tr>
 
 <tr>
+<td>Startling Planet</td>
+<td>1989</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Startling Stories: Banner</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -63748,6 +63979,13 @@
 </tr>
 
 <tr>
+<td>They Call Me PussPuss</td>
+<td>1994</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
 <td>They Live</td>
 <td>1988</td>
 <td>Universal</td>
@@ -65121,6 +65359,13 @@
 <td>2020</td>
 <td>Dreamworks</td>
 <td><a href="Dreamworks/Dreamworks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Trombone</td>
+<td>1990</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70662,6 +70907,13 @@
 <td>2006</td>
 <td>Alias</td>
 <td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yesterday's Tomorrows</td>
+<td>1970</td>
+<td>Knockabout</td>
+<td><a href="Knockabout/Knockabout.html">Details</a></td>
 </tr>
 
 <tr>
