--- a/index.html
+++ b/index.html
@@ -64343,6 +64343,13 @@
 </tr>
 
 <tr>
+<td>Tic Toc Tom</td>
+<td>1995</td>
+<td>Detonator Canada</td>
+<td><a href="DetonatorCanada/DetonatorCanada.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tidalwave Comics</td>
 <td>2007</td>
 <td>Publisher</td>
@@ -64592,6 +64599,13 @@
 <td>2008</td>
 <td>Archaia</td>
 <td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Titan Books</td>
+<td>1981</td>
+<td>Publisher</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
