King Surf Comics

--- a/KingSurfComics/KingSurfComics.html
+++ b/KingSurfComics/KingSurfComics.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title> </title>
+<title>King Surf Comics</title>
 </head>
 
 <body>
-<img src=".jpg">
+<img src="KingSurfComics1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,15 +18,20 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=".jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingSurfComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingSurfComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingSurfComics3.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+King Surf Comics is the self published title for creator Paul Benincasa.
 </p><p>
+<a href="https://www.instagram.com/kingsurfcomics">Instagram</a><br>
+<a href="https://www.facebook.com/KingSurfComics"> Facebook</a><br>
+<a href="https://www.etsy.com/shop/KingSurfComics?ref=shop_sugg">Etsy</a>
 
 </p>
 
