--- a/KingSurfComics/KingSurfComics.html
+++ b/KingSurfComics/KingSurfComics.html
@@ -29,9 +29,9 @@
 </p><p>
 King Surf Comics is the self published title for creator Paul Benincasa.
 </p><p>
-<a href="https://www.instagram.com/kingsurfcomics">Instagram</a><br>
-<a href="https://www.facebook.com/KingSurfComics"> Facebook</a><br>
-<a href="https://www.etsy.com/shop/KingSurfComics?ref=shop_sugg">Etsy</a>
+<a href="https://www.instagram.com/kingsurfcomics">King Surf @ Instagram</a><br>
+<a href="https://www.facebook.com/KingSurfComics">King Surf @ Facebook</a><br>
+<a href="https://www.etsy.com/shop/KingSurfComics?ref=shop_sugg">King Surf @ Etsy</a>
 
 </p>
 
