--- a/index.html
+++ b/index.html
@@ -7873,6 +7873,13 @@
 </tr>
 
 <tr>
+<td>Awesome Comics</td>
+<td>1997</td>
+<td>Publisher</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Axa</td>
 <td>1978</td>
 <td>Ken Pierce</td>
@@ -68481,6 +68488,13 @@
 <td>1992</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vigilante</td>
+<td>1983</td>
+<td>DC</td>
+<td><a href="Vigilante/Vigilante.html">Details</a></td>
 </tr>
 
 <tr>
